--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waktu Sholat & Adzan - Islamic Prayer Times</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="prayer-times-web/assets/css/styles.css">
+    <link rel="manifest" href="prayer-times-web/manifest.json">
     <meta name="theme-color" content="#667eea">
 </head>
 <body>
@@ -181,10 +181,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="src/modules/utils.js"></script>
-    <script src="src/modules/storage.js"></script>
-    <script src="src/modules/api.js"></script>
-    <script src="src/modules/ui.js"></script>
-    <script src="src/main.js"></script>
+    <script src="prayer-times-web/src/modules/api.js"></script>
+    <script src="prayer-times-web/src/modules/storage.js"></script>
+    <script src="prayer-times-web/src/modules/ui.js"></script>
+    <script src="prayer-times-web/src/modules/utils.js"></script>
+    <script src="prayer-times-web/src/main.js"></script>
 </body>
 </html>
